# RainText-Android

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/cz/kureii/raintext/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Dockerfile  native-lib.cpp
app/src/main/cpp/sha3/: CMakeLists.txt  sha3.c  sha3.h
app/src/main/java/cz/kureii/raintext/: MainActivity.kt  RainText.kt
app/src/main/java/cz/kureii/raintext/model/: EncryptionManager.kt  PasswordDatabaseHelper.kt  PasswordItem.kt  ThemeType.kt
app/src/main/java/cz/kureii/raintext/modules/: AppModule.kt
app/src/main/java/cz/kureii/raintext/services/: SavePasswordService.kt  SavePasswordWorker.kt
app/src/main/java/cz/kureii/raintext/utils/: ClipboardUtility.kt  DividerItemDecoration.kt  PasswordGenerator.kt
app/src/main/java/cz/kureii/raintext/utils/security/: ClipboardUtility.kt  EmulatorDetection.kt
app/src/main/java/cz/kureii/raintext/view/: AddPasswordDialogFragment.kt  BasePasswordDialogFragment.kt  EditPasswordDialogFragment.kt  MainActivity.kt  PasswordAdapter.kt  PasswordViewHolder.kt
app/src/main/java/cz/kureii/raintext/view/activities/: MainActivity.kt  SplashScreenActivity.kt
app/src/main/java/cz/kureii/raintext/view/adapters/: DragManageAdapter.kt  PasswordAdapter.kt
app/src/main/java/cz/kureii/raintext/view/fragments/: AddPasswordDialogFragment.kt  BasePasswordDialogFragment.kt  BottomSheetSettingsFragment.kt  EditPasswordDialogFragment.kt  LoadingFragment.kt
app/src/main/java/cz/kureii/raintext/view/viewholders/: BasePasswordViewHolder.kt  PasswordViewHolder.kt
app/src/main/java/cz/kureii/raintext/viewmodel/: PasswordViewModel.kt
app/src/main/res/drawable/: ic_add.xml  ic_delete.xml  ic_drag_and_drop.xml  ic_edit.xml  ic_hide_password.xml  ic_ok.xml  ic_settings.xml  ic_show_password.xml  ic_wrong.xml  loading_bar_drawable.xml  progress_bar_drawable.xml  rain_text_background.xml  rain_text_foreground.xml  rounded_corners.xml  settings_rounded_corners_fragment.xml  settings_rounded_corners_main_activity.xml  splash_screen_drawable.xml  table_divider.xml
app/src/main/res/font/: nunito_font_family_dark_theme.xml
app/src/main/res/layout/: activity_main.xml  activity_splash_screen.xml  bottom_sheet_settings.xml  custom_spinner_dropdown_item.xml  dialog_password.xml  item_password.xml  loading_fragment.xml
app/src/main/res/mipmap-anydpi-v26/: rain_text.xml  rain_text_round.xml
app/src/main/res/values/: arrays.xml  colors.xml  integer.xml  rain_text_background.xml  strings.xml  themes.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/cz/kureii/raintext/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
